--- a/front/src/app/components/offer-card/offer-card.html
+++ b/front/src/app/components/offer-card/offer-card.html
@@ -1,1 +1,15 @@
-<p>offer-card works!</p>
+<p>{{ offer.title }}</p>
+  
+@if (offer) {
+<div class="card w-96 bg-base-100 card-md shadow-sm">
+  <div class="card-body">
+    <h2 class="card-title">{{ offer.title }}</h2>
+    <p>{{ offer.description }}</p>
+    <div class="justify-end card-actions">
+      <button class="btn btn-primary">Voir l'offre</button>
+      </div>
+    </div>
+  </div>
+} @else {
+  <p>No offer</p>
+}
