--- a/front/src/app/pages/offer/offer.html
+++ b/front/src/app/pages/offer/offer.html
@@ -1,1 +1,7 @@
-<p>offer works!</p>
+<div class="flex flex-col item-center justify-center h-screen">
+  @for(offer of offers; track $index) {
+    <app-offer-card [offer]="offer"></app-offer-card>
+  } @empty {
+    <p>No offers</p>
+  }
+</div>
