--- a/front/src/app/pages/offer-details/offer-details.html
+++ b/front/src/app/pages/offer-details/offer-details.html
@@ -1,12 +1,14 @@
-<div class="flex flex-col items-center justify-center ">
+<div class="flex flex-col items-center justify-center">
   @if (offer.isLoading()) {
-    <p>Loading...</p>
+  <p>Loading...</p>
   } @else if (offer.error()) {
-    <p>Error</p>
+  <p>Error</p>
   } @else {
-    <p>{{ offer.value()?.title }}</p>
-    <p>{{ offer.value()?.description }}</p>
-    <p>{{ offer.value()?.createdAt | date }}</p>
-    <p>{{ offer.value()?.status }}</p>
+  <p class="text-2xl font-bold font-poppins text-primary">
+    {{ offer.value()?.title }}
+  </p>
+  <p>{{ offer.value()?.description }}</p>
+  <p>{{ offer.value()?.createdAt | date }}</p>
+  <p>{{ offer.value()?.status }}</p>
   }
 </div>
